required for login page

--- a/home.html
+++ b/home.html
@@ -49,11 +49,11 @@
 								</div>
 								<div class="col-12 form-group">
 									<label for="login-form-username">E-mail:</label>
-									<input type="email" id="login-form-username" name="login-form-username" value="" class="form-control" />
+									<input required type="email" id="login-form-username" name="login-form-username" value="" class="form-control" />
 								</div>
 								<div class="col-12 form-group">
 									<label for="login-form-password">Password:</label>
-									<input type="password" id="login-form-password" name="login-form-password" value="" class="form-control" />
+									<input required type="password" id="login-form-password" name="login-form-password" value="" class="form-control" />
 								</div>
 								<div class="col-12 form-group">
 									<button class="btn btn-secondary m-0" id="login-form-submit" name="login-form-submit" value="login">Login</button>
