--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Sistema de Ajuste e Controle de Horas --</title>
+	<title>Sistema de Ajuste e Controle de Horas</title>
 
 </head>
 
