--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
 				<div class="row">
 					<div class="col-md-4">
 						<div>
-							<form id="login-form" name="login-form" class="row" action="#" method="post"
+							<form id="login-form" name="login-form" class="row" action="php/login.php" method="post"
 							onsubmit="return validateForm()">
 								<div class="col-12" style="padding-top: 50px;">
 									<h3>Acesse sua conta</h3>
